--- a/src/main/resources/styles/light-theme.css
+++ b/src/main/resources/styles/light-theme.css
@@ -21,6 +21,7 @@
     -fx-background-color: #456381;
     -fx-padding: 10px;
 }
+
 .header-label {
     -fx-text-fill: white;
     -fx-font-size: 20px;
@@ -34,35 +35,7 @@
     -fx-min-width: 200px; /* чтобы левая панель не сжималась */
     -fx-pref-width: 160px; /* фиксированная ширина */
 }
-.nav-button {
-    -fx-text-fill: white;
-    -fx-font-weight: bold;
-    -fx-background-radius: 5px;
-    -fx-border-radius: 5px;
-    -fx-padding: 10px;
-    -fx-cursor: hand;
-    -fx-font-size: 14px;
-    -fx-border-color: transparent;
-    -fx-background-color: #3b5998;
-}
-.nav-button-hover {
-    -fx-background-color: #2e4473;
-}
-/* Новый блок - общие стили для кнопок левой панели */
-.left .nav-button {
-    -fx-min-width: 160px;
-    -fx-pref-width: 160px;
-    -fx-padding: 10 20;
-    -fx-font-size: 14px;
-    -fx-font-weight: bold;
-    -fx-text-alignment: center;
-    -fx-wrap-text: false;
-    -fx-background-radius: 5px;
-    -fx-border-radius: 5px;
-    -fx-cursor: hand;
-    -fx-transition: background-color 0.3s ease, effect 0.3s ease;
-    -fx-text-fill: white;
-}
+
 .button-devices {
     -fx-background-color: #3498db;
     -fx-padding: 10 20;
@@ -70,12 +43,14 @@
     -fx-pref-width: 160px;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
 }
+
 .button-devices-hover {
     -fx-background-color: #5dade2;
     -fx-padding: 10 20;
     -fx-min-width: 160px;
     -fx-pref-width: 160px;
 }
+
 .button-grouped {
     -fx-background-color: #bbbf06;
     -fx-padding: 10 20;
@@ -87,6 +62,7 @@
     -fx-alignment: center;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
 }
+
 .button-grouped-hover {
     -fx-background-color: #d5d837;
     -fx-padding: 10 20;
@@ -97,6 +73,7 @@
     -fx-pref-width: 160px;
     -fx-alignment: center;
 }
+
 .button-schemes {
     -fx-background-color: #620f8c;
     -fx-padding: 10 20;
@@ -108,6 +85,7 @@
     -fx-alignment: center;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
 }
+
 .button-schemes-hover {
     -fx-background-color: #6f129f;
     -fx-padding: 10 20;
@@ -118,6 +96,7 @@
     -fx-pref-width: 160px;
     -fx-alignment: center;
 }
+
 .button-add-device {
     -fx-background-color: #2ecc71;
     -fx-padding: 10 20;
@@ -125,12 +104,14 @@
     -fx-pref-width: 160px;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
 }
+
 .button-add-device-hover {
     -fx-background-color: #58d68d;
     -fx-padding: 10 20;
     -fx-min-width: 160px;
     -fx-pref-width: 160px;
 }
+
 .button-reports {
     -fx-background-color: #e67e22;
     -fx-padding: 10 20;
@@ -138,12 +119,14 @@
     -fx-pref-width: 160px;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
 }
+
 .button-reports-hover {
     -fx-background-color: #f5a13d;
     -fx-padding: 10 20;
     -fx-min-width: 160px;
     -fx-pref-width: 160px;
 }
+
 .button-theme-toggle {
     -fx-min-width: 160px; /* фиксированная ширина как у других кнопок */
     -fx-pref-width: 160px;
@@ -158,13 +141,14 @@
     -fx-transition: background-color 0.3s ease, effect 0.3s ease;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
 }
-/* Hover для кнопки смены темы */
+
 .button-theme-toggle-hover {
-    -fx-background-color: #203443; /* светлее при наведении */
+    -fx-background-color: #203443;
     -fx-padding: 10 20;
     -fx-min-width: 160px;
     -fx-pref-width: 160px;
 }
+
 .button-exit {
     -fx-background-color: #e74c3c;
     -fx-padding: 10 20;
@@ -172,47 +156,56 @@
     -fx-pref-width: 160px;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
 }
+
 .button-exit-hover {
     -fx-background-color: #ec7063;
     -fx-padding: 10 20;
     -fx-min-width: 160px;
     -fx-pref-width: 160px;
 }
+
 /* Центр */
 #contentArea {
     -fx-padding: 10px;
     -fx-spacing: 15px;
 }
+
 /* Поиск */
 .search-delete-pane {
     -fx-spacing: 10px;
 }
+
 .search-label {
     -fx-font-weight: bold;
 }
+
 .search-field {
     -fx-pref-width: 300px;
     -fx-background-color: #ecf0f1;
     -fx-border-color: #bdc3c7;
 }
+
+/* Удаление */
 .button-delete {
-    -fx-background-color: #d63a2a;
+    -fx-background-color: #d85548;
     -fx-text-fill: white;
     -fx-font-weight: bold;
     -fx-background-radius: 5px;
     -fx-border-radius: 5px;
     -fx-padding: 5px 10px;
     -fx-cursor: hand;
-    -fx-min-width: 230px;
-    -fx-pref-width: 160px;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
 }
+
 .button-delete-hover {
-    -fx-background-color: #fb4c3b;
+    -fx-background-color: #fd6454;
     -fx-padding: 5px 10px;
-    -fx-min-width: 230px;
-    -fx-pref-width: 160px;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
 }
+
 /* Кнопки экспорт и импорт*/
 .button-export {
     -fx-background-color: #4CAF50;
@@ -222,13 +215,19 @@
     -fx-border-radius: 5px;
     -fx-font-weight: bold;
     -fx-cursor: hand;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
     -fx-transition: background-color 0.3s ease, effect 0.3s ease;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
 }
+
 .button-export-hover {
     -fx-background-color: #58d68d;
     -fx-padding: 5 10;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
 }
+
 .button-import {
     -fx-background-color: #2196F3;
     -fx-text-fill: white;
@@ -237,13 +236,19 @@
     -fx-border-radius: 5px;
     -fx-font-weight: bold;
     -fx-cursor: hand;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
     -fx-transition: background-color 0.3s ease, effect 0.3s ease;
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
 }
+
 .button-import-hover {
     -fx-background-color: #5dade2;
     -fx-padding: 5 10;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
 }
+
 /* Статистика */
 .statistics-pane {
     -fx-background-color: #f8f9fa;
@@ -252,44 +257,53 @@
     -fx-border-radius: 5px;
     -fx-spacing: 10px;
 }
+
 .statistics-header {
     -fx-font-weight: bold;
     -fx-font-size: 16px;
     -fx-padding-bottom: 10px;
     -fx-text-fill: #333;
 }
+
 .statistics-data {
     -fx-spacing: 20px;
 }
+
 .stat-total {
     -fx-text-fill: #1e74e4;
     -fx-font-size: 24px;
     -fx-font-weight: bold;
 }
+
 .stat-working {
     -fx-text-fill: #2ecc71;
     -fx-font-size: 24px;
     -fx-font-weight: bold;
 }
+
 .stat-storage {
     -fx-text-fill: #e74c3c;
     -fx-font-size: 24px;
     -fx-font-weight: bold;
 }
+
 .stat-lost {
     -fx-text-fill: #706b69;
     -fx-font-size: 24px;
     -fx-font-weight: bold;
 }
+
 .stat-broken {
     -fx-text-fill: #ef8a06;
     -fx-font-size: 24px;
     -fx-font-weight: bold;
 }
+
 .stat-label {
     -fx-font-size: 14px;
     -fx-text-fill: #555;
 }
+
 /* Кнопки в таблице, колонка "Фото" */
 .table-button-add {
     -fx-background-color: #4CAF50;
@@ -304,11 +318,13 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
     -fx-transition: background-color 0.2s ease;
 }
+
 .table-button-add-hover {
     -fx-background-color: #66BB6A; /* светлее зелёный */
     -fx-padding: 3 6;
     -fx-font-size: 8px;
 }
+
 .table-button-view {
     -fx-background-color: #2196F3;
     -fx-text-fill: white;
@@ -322,40 +338,49 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
     -fx-transition: background-color 0.2s ease;
 }
+
 .table-button-view-hover {
     -fx-background-color: #64B5F6; /* светлее синий */
     -fx-padding: 3 6;
     -fx-font-size: 8px;
 }
+
 /* Нижняя панель */
 .bottom {
     -fx-background-color: #ecf0f1;
     -fx-padding: 5px;
     -fx-alignment: center-left;
 }
+
 .status-label {
     -fx-text-fill: black;
     -fx-font-size: 12px;
 }
+
 /* Reports.fxml */
 .reports-root {
     -fx-padding: 20px;
 }
+
 .report-buttons {
     -fx-spacing: 20px;
 }
+
 .report-radio {
     -fx-font-size: 14px;
     -fx-font-weight: bold;
     -fx-text-fill: #333;
 }
+
 .report-title {
     -fx-font-size: 18px;
     -fx-font-weight: bold;
 }
+
 .chart-pane {
     -fx-background-color: transparent;
 }
+
 .report-export-button {
     -fx-background-color: #429846;
     -fx-text-fill: white;
@@ -368,36 +393,45 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
     -fx-transition: background-color 0.3s ease, effect 0.3s ease;
 }
+
 .report-export-button-hover {
     -fx-background-color: #51bc56; /* чуть темнее при наведении */
     -fx-padding: 5 10;
 }
+
 /* Add-device-form.fxml */
 .add-device-root {
     -fx-padding: 15px;
 }
+
 .form-header {
     -fx-font-size: 16px;
     -fx-font-weight: bold;
     -fx-padding-bottom: 10px;
 }
+
 .form-grid {
     -fx-hgap: 10px;
     -fx-vgap: 10px;
 }
+
 .form-label {
     -fx-alignment: center-right;
 }
+
 .form-input {
     -fx-pref-width: 200px;
 }
+
 .form-textarea {
     -fx-pref-width: 200px;
     -fx-pref-height: 60px;
 }
+
 .photo-picker {
     -fx-spacing: 5px;
 }
+
 .photo-choose-btn {
     -fx-background-color: #105383;
     -fx-text-fill: white;
@@ -410,18 +444,22 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
     -fx-transition: background-color 0.3s ease, effect 0.3s ease;
 }
+
 .photo-choose-btn-hover {
     -fx-background-color: #1080c8;
     -fx-padding: 5px 10px;
 }
+
 .photo-list {
     -fx-pref-height: 100px;
     -fx-pref-width: 200px;
 }
+
 .form-buttons {
     -fx-spacing: 10px;
     -fx-alignment: center-right;
 }
+
 .button-cancel {
     -fx-background-color: #932014;
     -fx-text-fill: white;
@@ -434,10 +472,12 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
     -fx-transition: background-color 0.3s ease, effect 0.3s ease;
 }
+
 .button-cancel-hover {
     -fx-background-color: #f43420;
     -fx-padding: 5px 10px;
 }
+
 .button-add {
     -fx-background-color: #1eb15e;
     -fx-text-fill: white;
@@ -450,13 +490,104 @@
     -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
     -fx-transition: background-color 0.3s ease, effect 0.3s ease;
 }
+
 .button-add-hover {
     -fx-background-color: #1bd568;
     -fx-padding: 5px 10px;
 }
+
 .form-message {
     -fx-text-fill: red;
     -fx-padding-top: 10px;
+}
+
+/* Scheme-editor.fxml */
+.new-scheme-button {
+    -fx-background-color: #93bc04;
+    -fx-text-fill: white;
+    -fx-padding: 5 10;
+    -fx-background-radius: 5px;
+    -fx-border-radius: 5px;
+    -fx-font-weight: bold;
+    -fx-cursor: hand;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
+    -fx-transition: background-color 0.3s ease, effect 0.3s ease;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
+}
+
+.new-scheme-button-hover {
+    -fx-background-color: #b8ec04;
+    -fx-padding: 5 10;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
+}
+
+.save-scheme-button {
+    -fx-background-color: #04a68e;
+    -fx-text-fill: white;
+    -fx-padding: 5 10;
+    -fx-background-radius: 5px;
+    -fx-border-radius: 5px;
+    -fx-font-weight: bold;
+    -fx-cursor: hand;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
+    -fx-transition: background-color 0.3s ease, effect 0.3s ease;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
+}
+
+.save-scheme-button-hover {
+    -fx-background-color: #05d3b4;
+    -fx-padding: 5 10;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
+}
+
+.delete-scheme-button {
+    -fx-background-color: #d63525;
+    -fx-text-fill: white;
+    -fx-padding: 5 10;
+    -fx-background-radius: 5px;
+    -fx-border-radius: 5px;
+    -fx-font-weight: bold;
+    -fx-cursor: hand;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
+    -fx-transition: background-color 0.3s ease, effect 0.3s ease;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
+}
+
+.delete-scheme-button-hover {
+    -fx-background-color: #fa3b28;
+    -fx-padding: 5 10;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
+}
+
+.tool-button {
+    -fx-background-color: #d1d0cd;
+    -fx-text-fill: #d1d0cd;
+    -fx-padding: 5 10;
+    -fx-background-radius: 5px;
+    -fx-border-radius: 5px;
+    -fx-font-weight: bold;
+    -fx-cursor: hand;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
+    -fx-transition: background-color 0.3s ease, effect 0.3s ease;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.2), 2, 0, 0, 1);
+}
+
+.tool-button-hover {
+    -fx-background-color: #dfdedc;
+    -fx-padding: 5 10;
+    -fx-min-width: 40px;
+    -fx-pref-width: 40px;
+}
+
+.scheme-label, .select-label {
+    -fx-font-weight: bold;
 }
 
 /* ===== Оптимизированные стили для TreeTableView с группировкой ===== */
@@ -464,9 +595,11 @@
 .even-row {
     -fx-background-color: #b8b8b8;
 }
+
 .odd-row {
     -fx-background-color: white;
 }
+
 .selected-row {
     -fx-background-color: #7abcff;
 }
@@ -490,9 +623,11 @@
 .tree-table-row-cell.even-row {
     -fx-background-color: white;
 }
+
 .tree-table-row-cell.odd-row {
     -fx-background-color: #b8b8b8;
 }
+
 .tree-table-row-cell.selected-row {
     -fx-background-color: #a0c8ff;
 }
@@ -501,6 +636,7 @@
 .tree-table-row-cell:hover .text {
     -fx-fill: black;
 }
+
 .tree-table-row-cell:selected .text {
     -fx-fill: black;
 }
@@ -551,8 +687,8 @@
     -fx-wrap-text: true;
     -fx-text-overrun: clip;
     -fx-text-alignment: center;
-    -fx-label-padding: 0 0 0 0;  /* Снимаем отступы у label */
-    -fx-pref-height: 48px;       /* Высота для label */
+    -fx-label-padding: 0 0 0 0; /* Снимаем отступы у label */
+    -fx-pref-height: 48px; /* Высота для label */
     -fx-min-height: 48px;
     -fx-max-height: 96px;
 }
