--- a/src/main/resources/views/scheme-editor.fxml
+++ b/src/main/resources/views/scheme-editor.fxml
@@ -24,7 +24,7 @@
             <HBox spacing="10" alignment="CENTER_LEFT">
                 <Label text="Схема:" styleClass="scheme-label"/>
                 <ComboBox fx:id="schemeComboBox" prefWidth="200"/>
-                <Button fx:id="saveSchemeBtn" styleClass="save-scheme-button">
+                <Button fx:id="saveSchemeBtn" styleClass="tool-button">
                     <graphic>
                         <ImageView fitWidth="24" fitHeight="24" pickOnBounds="true" preserveRatio="true">
                             <Image url="@../images/save.png"/>
@@ -32,6 +32,36 @@
                     </graphic>
                     <tooltip>
                         <Tooltip text="Сохранить схему"/>
+                    </tooltip>
+                </Button>
+                <Button fx:id="clearSchemeBtn" styleClass="tool-button">
+                    <graphic>
+                        <ImageView fitWidth="24" fitHeight="24" pickOnBounds="true" preserveRatio="true">
+                            <Image url="@../images/clear.png"/>
+                        </ImageView>
+                    </graphic>
+                    <tooltip>
+                        <Tooltip text="Очистить схему"/>
+                    </tooltip>
+                </Button>
+                <Button fx:id="zoomInBtn" styleClass="tool-button">
+                    <graphic>
+                        <ImageView fitWidth="24" fitHeight="24" pickOnBounds="true" preserveRatio="true">
+                            <Image url="@../images/zoom_plus.png"/>
+                        </ImageView>
+                    </graphic>
+                    <tooltip>
+                        <Tooltip text="Увеличить схему"/>
+                    </tooltip>
+                </Button>
+                <Button fx:id="zoomOutBtn" styleClass="tool-button">
+                    <graphic>
+                        <ImageView fitWidth="24" fitHeight="24" pickOnBounds="true" preserveRatio="true">
+                            <Image url="@../images/zoom_minus.png"/>
+                        </ImageView>
+                    </graphic>
+                    <tooltip>
+                        <Tooltip text="Уменьшить схему"/>
                     </tooltip>
                 </Button>
             </HBox>
@@ -137,10 +167,12 @@
     </top>
     <!-- Центральная область: холст схемы -->
     <center>
-        <ScrollPane>
+        <ScrollPane fx:id="schemeScrollPane" prefWidth="800" prefHeight="600" hbarPolicy="AS_NEEDED" vbarPolicy="AS_NEEDED">
             <AnchorPane fx:id="schemePane"
-                        prefWidth="800"
-                        prefHeight="600"
+                        prefWidth="1000"
+                        prefHeight="1000"
+                        minWidth="0.0"
+                        minHeight="0.0"
                         onMousePressed="#onPaneMousePressed"
                         onMouseDragged="#onPaneMouseDragged"
                         onMouseReleased="#onPaneMouseReleased">
