--- a/src/main/resources/views/scheme-editor.fxml
+++ b/src/main/resources/views/scheme-editor.fxml
@@ -5,11 +5,6 @@
 <!--
 Автор: vladimir_shi
 Создал: 2025-09-18 (на основе существующих FXML)
-Описание: FXML для редактора интерактивных схем.
-- Основной холст (AnchorPane) для отображения и рисования схемы.
-- Панель инструментов: режимы рисования и добавления приборов.
-- ComboBox для выбора прибора из списка.
-- Кнопки для действий: Сохранить, загрузить, новый.
 -->
 
 <?import javafx.scene.image.ImageView?>
@@ -167,7 +162,7 @@
     </top>
     <!-- Центральная область: холст схемы -->
     <center>
-        <ScrollPane fx:id="schemeScrollPane" prefWidth="800" prefHeight="600" hbarPolicy="AS_NEEDED" vbarPolicy="AS_NEEDED">
+        <ScrollPane fx:id="schemeScrollPane" prefWidth="800" prefHeight="600">
             <AnchorPane fx:id="schemePane"
                         prefWidth="1000"
                         prefHeight="1000"
